# mcpp

./: .gitignore  INSTALL-jp  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  mcpp-gcc.1  mcpp.1
doc-jp/: cpp-test.html  mcpp-manual.html  mcpp-porting.html
src/: Makefile.in  config.h.in  configed.H  directive.c  eval.c  expand.c  internal.H  main.c  noconfig.H  support.c  system.c
tests/: Makefile.in
